syntax = "proto3";

import "shared.proto";

package packet;

message PacketBatchListWrapper {
  oneof msg {
    PacketBatchList batch_list = 1;
    bool heartbeat = 2;
  }
}

message PacketBatchList {
  shared.Header header = 1;
  repeated PacketBatch batch_list = 2;
}

message PacketBatchWrapper {
  repeated PacketBatch batch_list = 1;
}

message PacketBatch {
  repeated Packet packets = 1;
}

message Packet {
  bytes data = 1;
  Meta meta = 2;
}

message Meta {
  uint64 size = 1;
  string addr = 2;
  uint32 port = 3;
  PacketFlags flags = 4;
}

message PacketFlags {
  bool discard = 1;
  bool forwarded = 2;
  bool repair = 3;
  bool simple_vote_tx = 4;
  bool tracer_tx = 5;
}

